--- a/src/sass/layout/ui/_relations.scss
+++ b/src/sass/layout/ui/_relations.scss
@@ -6,33 +6,37 @@
   top: 0;
   left: 0;
 
-  .fly-out__btnGroup--visible:last-of-type {
-    .fly-out__hr:last-of-type {
+  &:not(.fly-out--relations-compact) {
+    .hide-when-not-compact {
       display: none;
     }
   }
 
+  // Visible groups starting the second one.
   .fly-out__btnGroup--visible ~ .fly-out__btnGroup--visible {
     margin-top: 3rem;
     padding-top: 3rem;
 
     border-top: .1rem solid hsl(0, 0%, 100%, .1);
-
-    .fly-out__showMore {
-      display: none;
-    }
   }
 }
+
+// Compact mode.
 
 .fly-out--relations-compact {
   max-width: none;
   --fly-out-half-inner-space: 3rem;
 
-  .fly-out__compact {
+  .hide-when-compact {
     display: none;
+  }
+
+  .fly-out__btnGroup--visible {
+    ~ * { display: none; }
   }
 }
 
+// Button collapsing the menu.
 .fly-out__compact {
   --btn-radius: 1rem 1rem 0rem 0rem;
   --primary: #{$moonless-night};
